--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "phpexiftool/phpexiftool",
+    "name": "dael/phpexiftool",
     "type": "library",
     "description": "Exiftool driver for PHP",
     "keywords": ["metadata","exiftool"],
@@ -18,7 +18,7 @@
         "monolog/monolog"      : "~1.3",
         "phpexiftool/exiftool" : "10.12",
         "symfony/process"      : "~2.0|~3.0",
-        "symfony/console"      : "~2.0|~3.0"
+        "symfony/console"      : "~2.0|~3.0|~4.0"
     },
     "suggest": {
         "jms/serializer"       : "To serialize tags",
