--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "doctrine/cache"       : "~1.0",
         "monolog/monolog"      : "~1.3",
         "phpexiftool/exiftool" : "10.12",
-        "symfony/process"      : "~2.0|~3.0",
+        "symfony/process"      : "~2.0|~3.0|~4.0",
         "symfony/console"      : "~2.0|~3.0|~4.0"
     },
     "suggest": {
