--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dael/phpexiftool",
+    "name": "phpexiftool/phpexiftool",
     "type": "library",
     "description": "Exiftool driver for PHP",
     "keywords": ["metadata","exiftool"],
@@ -17,21 +17,19 @@
         "doctrine/cache"       : "~1.0",
         "monolog/monolog"      : "~1.3",
         "phpexiftool/exiftool" : "10.12",
-        "symfony/process"      : "~2.0|~3.0|~4.0",
-        "symfony/console"      : "~2.0|~3.0|~4.0"
+        "symfony/process"      : "~4.0",
+        "symfony/console"      : "~4.0"
     },
     "suggest": {
         "jms/serializer"       : "To serialize tags",
         "symfony/yaml"         : "To serialize tags in Yaml format"
     },
     "require-dev": {
-        "symfony/css-selector" : "~2.0|~3.0",
-        "symfony/finder"       : "~2.0|~3.0",
-        "symfony/dom-crawler"  : "~2.0|~3.0",
-        "symfony/yaml"         : "~2.0|~3.0",
-        "jms/serializer"       : "~0.10",
-        "sami/sami"            : "~1.0",
-        "silex/silex"          : "~1.0"
+        "symfony/css-selector" : "~4.0",
+        "symfony/finder"       : "~4.0",
+        "symfony/dom-crawler"  : "~4.0",
+        "symfony/yaml"         : "~4.0",
+        "jms/serializer"       : "~0.10"
     },
     "autoload": {
         "psr-0": {
